Parameterize CORS allowed origins via app.allowed-origins property